src/pages/works/ScrollSite.css
/*.dev{*/
/*    font-weight: 900;*/
/*    font-size: clamp(18px, 2vw, 4vw);*/
/*    animation: flicker-out-1 5s linear reverse infinite forwards;*/
/*    text-shadow: 1px 1px 2px #E52020 !important;*/
/*    color: #E52020;*/
/*}*/

/*.contact{*/
/*    display: inline-flex;*/
/*}*/

/*a{*/
/*    color: white;*/
/*    font-size: clamp(9px, 1.2vw, 2vw);;*/
/*}*/

/*a:hover{*/
/*    color: white;*/
/*}*/

/*@keyframes flicker-out-1 {*/
/*    0% {*/
/*        opacity: 1;*/
/*    }*/
/*    13.9% {*/
/*        opacity: 1;*/
/*    }*/
/*    14% {*/
/*        opacity: 1;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    14.9% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    15% {*/
/*        opacity: 1;*/
/*    }*/
/*    22.9% {*/
/*        opacity: 1;*/
/*    }*/
/*    23% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    24.9% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    25% {*/
/*        opacity: 1;*/
/*    }*/
/*    34.9% {*/
/*        opacity: 1;*/
/*    }*/
/*    35% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    39.9% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    40% {*/
/*        opacity: 1;*/
/*    }*/
/*    42.9% {*/
/*        opacity: 1;*/
/*    }*/
/*    43% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    44.9% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    45% {*/
/*        opacity: 1;*/
/*    }*/
/*    50% {*/
/*        opacity: 1;*/
/*    }*/
/*    54.9% {*/
/*        opacity: 1;*/
/*    }*/
/*    55% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    69.4% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    69.5% {*/
/*        opacity: 1;*/
/*    }*/
/*    69.9% {*/
/*        opacity: 1;*/
/*    }*/
/*    70% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    79.4% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    79.9% {*/
/*        opacity: 1;*/
/*    }*/
/*    80% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    89.8% {*/
/*        opacity: 0;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    89.9% {*/
/*        opacity: 1;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    90% {*/
/*        opacity: 1;*/
/*        -webkit-box-shadow: none;*/
/*        box-shadow: none;*/
/*    }*/
/*    100% {*/
/*        opacity: 1;*/
/*    }*/
/*}*/


.cont-2{
    height: 300vh;
    background: #080914 !important;
    position: relative;
}

.scroll-box{
    position: sticky;
    top: 0vh;
    width: 100vw;
    /*width: 99vw;*/
    height: 100vh;
    /*padding: 1rem;*/
    /*border: 2px solid green !important;*/
}

.experience-title-box{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 10vh;

}
.experience-title{
    font-weight: 900;
    font-size: clamp(50px, 7vw, 7rem);
}
.container-animation{
    height: 100%;
    position: relative;

}

.side-1, .side-2, .side-3, .side-4{
    height: 50vh;
    overflow: hidden;

}


.side-1-text{
    /*border: 2px solid #ff0707;*/
    height: 100%;
    display: flex;
    justify-content: center;
    width: 70%;
    align-items: center;
}

.detail-text{
    /*border: 2px solid gray;*/
    /*font-size: clamp(20px, 2vw, 3vw);*/
    /*line-height: 5rem;*/
    /*padding: 1rem;*/
    display: flex;
    flex-direction: column;
    align-items: start;
    z-index: 1111111111;
}

.title{
    display: flex;
    flex-direction: column;
    line-height: 100%;
    font-size: clamp(50px, 4.5vw, 4.5vw);
    font-family: "Grape Nuts", cursive;
    /*align-self: center;*/
    font-weight: 900;
}

/*.detail-text span:nth-child(2) {*/
/*    font-size: clamp(20px, 3.5vw, 4vw);*/
/*    font-family: "Grape Nuts", cursive;*/
/*    align-self: center;*/
/*    font-weight: 900;*/
/*    !*color: #e30b16;*!*/
/*}*/

/*.detail-text span:nth-child(3) {*/
/*    font-size: clamp(25px, 3.5vw, 4vw);*/
/*    font-weight: 900;*/
/*    text-align: center;*/
/*}*/

.btn {
    font-size: clamp(15px, 1vw, 1vw);
    text-transform: uppercase;
    /*text-underline: #f10000;*/
}


.phone-img {
    /*animation: floatSoft 4s ease-in-out infinite;*/
    /*will-change: transform;*/
    position: absolute;
    top: 15vh;
    right: 50px;
    margin-right: 8vw;
    height: 50vh;
    width: 50vh;
}

/*.detail-img{*/
/*    width: 50%;*/
/*    border: 2px solid red;*/
/*}*/

.rock-1 {
    animation: floatSoft 4s ease-in-out infinite;
    will-change: transform;
    position: absolute;
    filter: drop-shadow(1px 1px 2rem #1c1c1c);
    top: 10vh;
    right: 16vw;
    z-index: -1;
    margin-right: 2vw;
}

@keyframes floatSoft {
    0%   { transform: translateY(0px) }
    50%  { transform: translateY(-10px) }
    100% { transform: translateY(0px) }
}

.rock-2 {
    position: absolute;
    animation: floatRock2 3s ease-in-out infinite;
    will-change: transform;
    top: 35vh;
    right: 35vw;
    margin-right: 2vw;
    z-index: -1;
    filter: drop-shadow(5px 5px 1rem #151515)
}

@keyframes floatRock2 {
    0%   { transform: translateY(0) }
    50%  { transform: translateY(30px) }
    100% { transform: translateY(0) }
}

.rock-3 {
    position: absolute;
    animation: floatRock2 3s ease-in-out infinite;
    will-change: transform;
    top: 50vh;
    right: 18vw;
    margin-right: 2vw;
    filter: drop-shadow(1px 1px 2rem #1c1c1c)
}
.worker {
    position: absolute;
    bottom: 0;
    right: 0;
    margin-right: 15vw;
    height: 75vh;
    width: auto;
}
.girl {
    position: absolute;
    top: 10%;
    right: 0;
    animation: floatRock2 3s ease-in-out infinite;
    will-change: transform;
    margin-right: 15vw;
    height: 80vh;
    width: auto;
}

.bust{
    position: absolute;
    top: 10%;
    right: 0;

    margin-right: 15vw;
    height: 80vh;
    width: auto;
}
.img-1 {
    background-image: url("../../assets/skatepark.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    height: 100%;
    width: 100%;
    /*border: 2px solid red;*/

    background-position: center;
}
.img-2{
    background-image: url("../../assets/mural.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 100%;
}

.img-3{
    background-image: url("../../assets/sky12.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 100%;
}

.img-4{
    background-image: url("../../assets/bsky.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 100%;
}


.second-middle{
    height: 25vh;
    padding: 5vh;
    justify-content: center;
    align-items: center;
}
.wrapper, .wrapper-1 {
    width: 100%;
    max-width: 2300px;
    margin-inline: auto;
    position: relative;
    height: 100px;
    overflow: hidden;
    mask-image: linear-gradient(
            to right,
            rgba(0,0,0,0),
            rgba(0,0,0,1) 20%,
            rgba(0,0,0,1) 80%,
            rgba(0,0,0,0)
    );
}

.wrapper-1{
    margin-top: 0;
}
.item{
    width: 200px;
    font-size: clamp(20px, 1vw, 3rem);
    font-weight: 500;
    height: 100px;
    /* background-color: red; */
    border-radius: 12px;
    position: absolute;
    left: max(calc(200px * 8), 100%);
    animation: scrollleft;
    animation-duration: 30s;
    animation-timing-function: linear;
    color: #ffffff;
    animation-iteration-count: infinite;
    /* animation-delay: -10s; */

}
.item-1{
    width: 200px;
    font-size: clamp(20px, 1vw, 3rem);
    font-weight: 500;
    height: 100px;
    /* background-color: red; */
    border-radius: 12px;
    position: absolute;
    right: max(calc(200px * 8), 100%);
    animation: scrollright;
    animation-duration: 30s;
    animation-timing-function: linear;
    color: #ffffff;
    animation-iteration-count: infinite;
}
.item1{
    animation-delay: calc(30s / 8 * (8 - 1) * -1) ;
}
.item2{
    animation-delay: calc(30s / 8 * (8 - 2) * -1) ;
}
.item3{
    animation-delay: calc(30s / 8 * (8 - 3) * -1) ;
}
.item4{
    animation-delay: calc(30s / 8 * (8 - 4) * -1 ) ;
}
.item5{
    animation-delay: calc(30s / 8 * (8 - 5) * -1) ;
}
.item6{
    animation-delay: calc(30s / 8 * (8 - 6) * -1) ;
}
.item7{
    animation-delay: calc(30s / 8 * (8 - 7) * -1) ;
}
.item8{
    animation-delay: calc(30s / 8 * (8 - 8) * -1) ;
}




footer {
    height: 50vh;
    display: flex;
    align-items: center;
    justify-content: center;
}
@keyframes square-in-hesitate {
    0% {
        clip-path: inset(100% 100% 100% 100%);
    }
    40% {
        clip-path: inset(33% 33% 33% 33%);
    }
    100% {
        clip-path: inset(0 0 0 0);
    }
}
[transition-style="in:square:hesitate"] {
    animation: 2.5s cubic-bezier(.25, 1, .30, 1) square-in-hesitate both;
}


@media screen and (min-width: 200px) and (max-width: 950px) {
    .phone-img {
        height: 40vh;
        width: auto;
        position: absolute;
    }

    .side-1-text{
        width: 100%;
    }


}

@media screen and (min-width: 1500px) {
    .phone-img {
        height: 65vh;
        width: auto;
        margin-right: 15vw;
    }
}

